# libto

./: COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  libTO.pc.in  libTO_config.h.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js
doc/html/_downloads/: 0001-drivers-hid-hid_cp2112-transfer-status-retries-and-r.patch  50-cp2112.rules  i2c-gpio-overlay.dts
doc/html/_static/: alabaster.css  custom.css  custom.js
doc/html/api/: defs.html  helper.html  i2c_wrapper.html  lib.html  se.html
doc/html/autotools_env/: settings.html  setup_linux.html  setup_windows_mingw.html  setup_windows_msys2.html
doc/html/migration/: migration_from_2.x.x_to_3.x.x.html  migration_from_3.x.x_to_4.x.x.html  migration_from_4.0.x_to_4.1.x.html  migration_from_4.1.x_to_4.2.x.html  migration_from_4.3.x_to_4.4.x.html  migration_from_4.4.x_to_4.5.x.html  migration_from_4.5.x_to_4.6.x.html
doc/html/misc/: power_optim.html
doc/html/wrapper/: cp2112_linux.html  implementation_guidelines.html  linux_generic.html  overview.html  raspberrypi.html
doc/pdf/Integration manual - TO136 on Linux device/: 0002-drivers-hid-hid-cp2112-add-parameters-for-specials-gpios.patch
examples/: Makefile.am  Makefile.in  ecies.c  ecies.h  ecies_fd.c  ecies_mbed.cpp  get_sn.c  hooks.c  seclink.c  tls_handshake.c
include/: Makefile.am  Makefile.in  TO.h  TO_cfg.h  TO_cmd.h  TO_defs.h  TO_endian.h  TO_helper.h  TO_i2c_wrapper.h  TO_stdint.h
pyutils/: Makefile.am  Makefile.in  TO_methods.py  __init__.py  config.py.in  const.py  methods.py  seclink.py
src/: Makefile.am  Makefile.in  api_auth.c  api_encrypt.c  api_hash.c  api_keys.c  api_lora.c  api_mac.c  api_nvm.c  api_system.c  api_tls.c  core.c  core.h  crc.c  crc.h  helper_certs.c  helper_ecies.c  helper_tls.c  seclink.c  seclink.h  seclink_aeshmac.c  seclink_arc4.c  seclink_none.c
tools/: Makefile.am  Makefile.in  TO_set_remote_pubkey.sh  TOsh.py
wrapper/: Makefile.am  Makefile.in  cp2112-win.c  cp2112.c  linux_generic.c  mbed_os.cpp  net_bridge.c  raspberrypi.c  stm32_hal.c
wrapper/cp2112-win-res/: README
wrapper/raspberrypi/: rpi_gpio.c  rpi_gpio.h
